Added JAVA_OPTS environment variable, closes #2